# n50osm

./: .gitignore  .libcst.codemod.yaml  n50merge.py  n50osm.py  pyproject.toml  tasks.py
n50/: __main__.py  cli.py  exceptions.py  generate.py  merge.py  municipality.py  municipality_metadata.py  osm.py
n50/web_io/: building_types.py  common.py  municipality_metadata.py
n50osm/: __main__.py
tests/web_io/: test_building_types.py  test_municipality_metadata.py
