[tool.poetry]
name = "n50osm"
version = "0.8.0"
description = "Tools for extracting N50 topo data from Kartverket and for merging it with existing OSM data."
authors = [
    "NKA <nkamapper@gmail.com>",
    "Harald Husum <harald.husum@gmail.com>",
]
license = "CC0-1.0"
readme = "README.md"

packages = [
    { include = "n50" },
]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
cleo = "^1.0.0a5"
pex = "^2.1.104"
invoke = "^1.7.1"
requests = "^2.28.1"
returns = "^0.19.0"

[tool.poetry.group.dev.dependencies]
fixit = "^0.1.4"
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"
flake8-bugbear = "^22.9.11"
pyanalyze = "^0.7.0"

[tool.poetry.scripts]
n50 = 'n50.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
py_version = 37
profile = "black"
force_single_line = true
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["n50", "tests"]


[tool.black]
target-version = ['py37']
preview = true